--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,5 @@ $btn-width: 120px;
 $btn-height: 40px;
 $btn-color-blue: blue;
 $btn-color-red: red;
-$btn-color-green: green;
+$btn-color-green: rgb(68, 223, 68);
 $block-padding: 60px;
