--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,5 +1,5 @@
-@import "./styles/variables";
-@import "./styles/mixins";
+@import "../sass/variables";
+@import "../sass/mixins";
 
 * {
   box-sizing: border-box;
