--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,5 +1,5 @@
-@import "../sass/variables";
-@import "../sass/mixins";
+@import "./styles/mixins";
+@import "./styles/variables";
 
 * {
   box-sizing: border-box;
@@ -8,5 +8,7 @@
 }
 
 body {
-  background-color: $background-color;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
