--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -4,10 +4,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: $black;
     height: 209px;
     
     &--text {
+        text-align: center;
         color: $white;
+        margin-top: 2em;
+        font-size: 1.5em;
     }
 }
