--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -6,10 +6,13 @@
     justify-content: space-between;
     height: 4.25em;
     margin: 3em 6em;
-    &--nav a {
+    .link {
         color: $first-color;
-        padding-left: 2em;
         text-decoration: none;
         font-size: 1.5em;
+        padding-left: 2em;
+    }
+    .active {
+        text-decoration: underline;
     }
 }
