--- a/src/sass/_Gallery.scss
+++ b/src/sass/_Gallery.scss
@@ -1,11 +1,10 @@
 @import "./styles/variables";
 
 .gallery {
-    background-color: $second-color;
+    background-color: var(--second-color);
     display: grid;
-    grid-template: 340px 340px/ 1fr 1fr 1fr;
+    grid-template: 1fr;
     margin: 3rem 6rem;
     padding: 50px;
     border-radius: 25px;
-    gap: 50px;
 }
