--- a/src/sass/styles/_variables.scss
+++ b/src/sass/styles/_variables.scss
@@ -1,6 +1,9 @@
-/* Colors */
-$background-color: #E5E5E5;
-$first-color: #FF6060;
-$second-color: #F6F6F6;
-$white: #FFFFFF;
-$black: #000000;
+:root {
+    --black: #000000;
+    --white: #FFFFFF;
+    
+    --background-color: #E5E5E5;
+    --first-color: #FF6060;
+    --second-color: #F6F6F6;
+    
+}
