--- a/src/sass/_Footer.scss
+++ b/src/sass/_Footer.scss
@@ -5,12 +5,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $black;
+    background-color: var(--black);
     height: 209px;
     
     &--text {
         text-align: center;
-        color: $white;
+        color: var(--white);
         margin-top: 2em;
         font-size: 1.5em;
     }
