--- a/src/sass/_Header.scss
+++ b/src/sass/_Header.scss
@@ -7,7 +7,7 @@
     height: 4.25em;
     margin: 3em 6em;
     .link {
-        color: $first-color;
+        color: var(--first-color);
         text-decoration: none;
         font-size: 1.5em;
         padding-left: 2em;
