--- a/src/sass/_App.scss
+++ b/src/sass/_App.scss
@@ -1,12 +1,20 @@
-@import "./styles/mixins";
-@import "./styles/variables";
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+#root {
+  position: relative;
+  min-height: 96.8vh;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
+  max-width: 1440px;
+  margin: auto;
+}
+
+.content-wrap {
+  padding-bottom: 13rem;
 }
