--- a/src/sass/_Error.scss
+++ b/src/sass/_Error.scss
@@ -1,17 +1,20 @@
 @import "../sass/styles/variables";
 
 .error {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 1100px;
     color: var(--first-color);
-    text-align: center;
     &__code {
         font-size: 18rem;
-        margin: 10rem 0;
     }
     &__text {
         font-size: 2.25em;
+        line-height: 3.2rem;
     }
-    &__link {
-        margin: 10rem;
+    &__link { 
         &--text {
             color: var(--first-color);
             font-size: 1.125em;
