--- a/src/sass/_Footer.scss
+++ b/src/sass/_Footer.scss
@@ -3,15 +3,21 @@
 .footer{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 13rem;
+    max-width: 90rem;
+    position: absolute;
+    bottom: 0;
     align-items: center;
     justify-content: center;
     background-color: var(--black);
-    height: 209px;
-    
-    &--text {
+    &__logo {
+        margin-top: 2.5rem;
+    }
+    &__text {
+        margin-top: 3rem;
         text-align: center;
         color: var(--white);
-        margin-top: 2em;
-        font-size: 1.5em;
+        font-size: 1.5rem; 
     }
 }
