--- a/src/sass/_Header.scss
+++ b/src/sass/_Header.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     height: 4.25em;
     margin: 3em 6em;
+    max-width: 1440px;
     .link {
         color: var(--first-color);
         text-decoration: none;
