css galerie et les cartes ok

--- a/src/sass/_Card.scss
+++ b/src/sass/_Card.scss
@@ -1,13 +1,23 @@
 @import "./styles/variables";
 
 .card {
-    background: linear-gradient(180deg, rgba(255,96,96,0.9),rgba(255,96,96,1) 90%);
-    border-radius: 12px;
-    width: 340px;
-    height: 340px;
+    position: relative;
+    border-radius: 1.5rem;
+    height: 22rem;
+    width: 22rem;
     color: var(--white);
     &__image {
-        height: 50%;
+        object-fit: cover;
+        height: 100%;
         width: 100%;
+        border-radius: 1.5rem;
+        filter: brightness(0.7);
+    }
+    &__text {
+        width: 60%;
+        font-size: 1.125rem;
+        position: absolute;
+        bottom: 1rem;
+        left: 1rem;
     }
 }
