--- a/src/sass/_Gallery.scss
+++ b/src/sass/_Gallery.scss
@@ -2,12 +2,20 @@
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
-    background-color: var(--second-color);
+    grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
     gap: 3rem;
+    background-color: var(--second-color);
     border-radius: 1.5rem; 
     margin: 3rem 6rem;
     padding: 3rem;
     align-items: center;
     justify-items: center;
 }
+
+/* display: flex;
+flex-wrap: wrap;
+background-color: var(--second-color);
+border-radius: 1.5rem; 
+margin: 3rem 6rem;
+padding: 3rem;
+gap: 3rem; */
