--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,8 @@
 @forward 'App';
 @forward 'Banner';
 @forward 'Card';
+@forward 'Carousel';
+@forward 'Collapse';
 @forward 'Error';
 @forward 'Footer';
 @forward 'Gallery';
