collapse terminee avec ficher json pour a propos

--- a/src/sass/_Collapse.scss
+++ b/src/sass/_Collapse.scss
@@ -22,6 +22,9 @@
             font-size: 1.125rem;
             padding: 1rem;
             line-height: 25.67px;
+            li {
+                list-style: none;
+            }
         }
     }
 }
