--- a/src/sass/_Collapse.scss
+++ b/src/sass/_Collapse.scss
@@ -1,12 +1,19 @@
-.collapse-wrap {
+.collapse__container--about {
+    margin: 0 13rem;
+}
+
+.collapse__container--sheet {
     display: flex;
+    justify-content: space-between;
+    & .collapse__content {
+        width: 582px;
+    }
 }
 
 .collapse {
     display: flex;
     flex-direction: column;
-    margin: 2rem 13rem;
-    &__toggle {
+     &__toggle {
         display: flex;
         justify-content: space-between;
         background-color: var(--first-color);
@@ -19,10 +26,11 @@
     }
     &__content {
         background-color: var(--second-color);
-        color: var(--first-color);
         overflow: hidden;
         transition: height ease 0.9s;
+        margin-bottom: 2rem;
         &--child {
+            color: var(--first-color);
             font-size: 1.125rem;
             padding: 1rem;
             line-height: 25.67px;
@@ -30,7 +38,7 @@
                 list-style: none;
             }
         }
-    }
+    } 
 }
 .rotate {
     transform: rotate(180deg);
