--- a/src/sass/_Sheet.scss
+++ b/src/sass/_Sheet.scss
@@ -1,3 +1,11 @@
 .sheet-wrap {
-    margin: 3rem 6rem;
+    margin: 0 6rem;
+}
+
+.collapse__container--sheet {
+    display: flex;
+    justify-content: space-between;
+    & .collapse__content {
+        width: 582px;
+    }
 }
