--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @forward 'Footer';
 @forward 'Gallery';
 @forward 'Header';
-@forward 'HostInfo';
-@forward 'LocationInfo';
+@forward 'SheetInfo';
 @forward 'Sheet';
+/* @forward './styles/variables';
+@forward './styles/mixins'; */
