--- a/src/sass/styles/_mixins.scss
+++ b/src/sass/styles/_mixins.scss
@@ -1,6 +1,17 @@
-@mixin vertical-list {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1em;
+@mixin mobile {
+    @media screen and (max-width: 767px) {
+        @content;
+    }
+}
+
+@mixin tablette {
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media screen and (min-width:1024px) {
+        @content;
+    }
 }
