--- a/src/sass/styles/_variables.scss
+++ b/src/sass/styles/_variables.scss
@@ -5,5 +5,8 @@
     --background-color: #E5E5E5;
     --first-color: #FF6060;
     --second-color: #F6F6F6;
+    --star-inactive: #E3E3E3;
     
 }
+
+/* $colorTest: purple; */
