--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -1,4 +1,4 @@
-@import "./styles/variables";
+@use '../util/' as u;
 
 .card {
     position: relative;
@@ -6,6 +6,9 @@
     height: 22rem;
     width: 22rem;
     color: var(--white);
+    @include u.breakpoint(small) {
+        height: 16rem;
+    }
     &__image {
         object-fit: cover;
         height: 100%;
