--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,13 +1,4 @@
-@forward 'App';
-@forward 'Banner';
-@forward 'Card';
-@forward 'Carousel';
-@forward 'Collapse';
-@forward 'Error';
-@forward 'Footer';
-@forward 'Gallery';
-@forward 'Header';
-@forward 'SheetInfo';
-@forward 'Sheet';
-/* @forward './styles/variables';
-@forward './styles/mixins'; */
+@forward 'base';
+@forward 'layout';
+@forward 'components';
+@forward 'util';
