--- a/src/sass/components/_Banner.scss
+++ b/src/sass/components/_Banner.scss
@@ -1,22 +1,34 @@
+@import '../util';
+
 .banner {
     position: relative;
-    max-width: 77.5em;
-    margin: 3em 6em;
+    margin: 1rem;
+    @include md {
+        margin: 3rem 6rem;
+    }
     &__img{
-        height: 14rem;
+        height: 7rem;
         width: 100%;
-        border-radius: 1.5rem;
+        border-radius: 0.625rem;
         object-fit: cover;
-        filter: brightness(0.7);
+        filter: brightness(0.8);
+        @include md {
+            height: 14rem;
+            border-radius: 1.5rem;
+        }
     }
     &__text {
         position: absolute;
         color: var(--white);
         top: 50%;
-        left: 50%;
+        left: 40%;
         transform: translate(-50%, -50%);
-        font-size: 3rem;
-        line-height: 70px;
-        width: 705px;
+        font-size: 1.5rem;
+        width: 217px;
+        @include md {
+            left: 50%;
+            font-size: 48px;
+            width: max-content;
+        }
     }
 }
