--- a/src/sass/components/_Carousel.scss
+++ b/src/sass/components/_Carousel.scss
@@ -1,26 +1,45 @@
+@import '../util';
+
 .carousel {
     position: relative;
+    color: $white;
     &__image {
-        height: 415px;
         width: 100%;
+        height: 16rem;
+        border-radius: 0.625rem;
         object-fit: cover;
-        border-radius: 1.5rem;
+        @include md {
+            height: 26rem;
+            border-radius: 1.5rem;
+        }
     }
-    &__arrow-left{
-        left: 20px;
-        top: 40%;
+    &__arrow {
         position: absolute;
+        top: 50%;
+        @include md {
+            font-size: 5rem;
+        }
     }
-    &__arrow-right{
-        position: absolute;
-        top: 40%;
-        right: 20px;
+    .left {
+        left: 0.5rem;
+        @include md {
+            left: 1.5rem;
+        }
+    }
+    .right {
+        right: 0.5rem;
+        @include md {
+            right: 1.5rem;
+        }
     }
     &__counter {
-        position: absolute;
-        top: 90%;
-        left: 50%;
-        font-size: 1.5rem;
-        color: var(--white);
+        display: none;
+        @include md {
+            display: inline;
+            position: absolute;
+            bottom: 10%;
+            left: 50%;
+            font-size: 1.125rem;
+        }
     }
 }
