--- a/src/sass/layout/_Header.scss
+++ b/src/sass/layout/_Header.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 1rem 2rem;
+    margin: 1rem 1.2rem;
     @include md {
         margin: 3rem 6rem;
     }
@@ -16,11 +16,13 @@
     }
     &__navigation {
         &--link {
-            color: var(--first-color);
+            color: $first-color;
             text-decoration: none;
             font-size: 0.75rem;
             padding-left: 2rem;
+            text-transform: uppercase;
             @include md {
+                text-transform: none;
                 font-size: 1.5rem;
             }
         }
