--- a/src/sass/util/_colors.scss
+++ b/src/sass/util/_colors.scss
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --black: #000000;
     --white: #FFFFFF;
     
@@ -7,4 +7,12 @@
     --second-color: #F6F6F6;
     --star-inactive: #E3E3E3;
     
-}
+} */
+
+$black: #000000;
+$white: #FFFFFF;
+
+$background-color: #E5E5E5;
+$first-color: #FF6060;
+$second-color: #F6F6F6;
+$star-inactive: #E3E3E3;
