--- a/src/sass/layout/_Error.scss
+++ b/src/sass/layout/_Error.scss
@@ -1,19 +1,34 @@
+@import '../util/';
+
 .error {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    height: 1100px;
-    color: var(--first-color);
+    text-align: center;
+    color: $first-color;
+    height: 100vh;
     &__code {
-        font-size: 18rem;
+        font-weight: 700;
+        font-size: 6rem;
+        @include md {
+            font-size: 18rem;
+        }
     }
     &__text {
-        font-size: 2.25em;
-        line-height: 3.2rem;
+        width: 260px;
+        font-size: 1.125rem;
+        line-height: 1.6rem;
+        @include md {
+            width: auto;
+            font-size: 2.25rem;
+        }
     }
     &__link { 
-        color: var(--first-color);
-        font-size: 1.125em;
+        color: $first-color;
+        font-size: 0.875rem;
+        @include md {
+            font-size: 1.125rem;
+        }
     }
 }
