--- a/src/sass/layout/_Footer.scss
+++ b/src/sass/layout/_Footer.scss
@@ -1,20 +1,27 @@
+@import '../util/';
+
 .footer{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 13rem;
-    position: absolute;
-    bottom: 0;
     align-items: center;
     justify-content: center;
-    background-color: var(--black);
-    &__logo {
-        margin-top: 2.5rem;
-    }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 13rem;
+    background-color: $black;
+    color: $white;
     &__text {
-        margin-top: 3rem;
+        width: 8rem;
+        height: 46px;
         text-align: center;
-        color: var(--white);
-        font-size: 1.5rem; 
+        font-size: 0.75rem; 
+        line-height: 1rem;
+        padding-top: 1rem;
+        @include md {
+            width: 100%;
+            padding-top: 3rem;
+            font-size: 1.5rem;
+        }
     }
 }
