--- a/src/sass/layout/_Header.scss
+++ b/src/sass/layout/_Header.scss
@@ -24,6 +24,7 @@
             @include md {
                 text-transform: none;
                 font-size: 1.5rem;
+                padding-left: 4rem;
             }
         }
     }
