--- a/src/sass/styles/_SheetInfo.scss
+++ b/src/sass/styles/_SheetInfo.scss
@@ -1,72 +1,100 @@
+@import '../util/';
+
 .description {
-    display: flex;
-    justify-content: space-between;
-    color: var(--first-color);
-    font-size: 1.125rem;
-    &__title {
+    color: $first-color;
+    @include md {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__info {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        & h1 {
-            font-size: 2em;
-            line-height: 51.34px;
+        justify-content: flex-end;
+        &--title {
+            margin: 0.5rem 0;
+            font-size: 1.125rem;
+            line-height: 25.67px;
+            @include md {
+                margin: 0;
+                line-height: 51.34px;
+                font-size: 2rem;
+            }
         }
-        & ul {
+        &--location {
+            font-size: 0.875rem;
+            @include md {
+                font-size: 1.125rem;
+            }
+        }
+        &--tags {
             display: flex;
-            list-style: none;
+            color: $white;
             gap: 10px;
-            color: var(--white);
-            margin: 1.5rem 0;
+            margin-top: 1rem;
+            @include md {
+                margin: 1rem 0;
+            }
             & li {
                 display: flex;
                 justify-content: center;
-                align-items: center;
-                background-color: var(--first-color);
-                border-radius: 0.625rem;
-                min-width: 115px;
-                height: 25px;
-                font-size: 0.875rem;
-                padding: 0 10px;
+                background-color: $first-color;
+                font-size: 0.625rem;
+                border-radius: 0.3rem;
+                min-width: 5.25rem;
+                padding: 5px;
+                @include md {
+                    font-size: 0.875rem;
+                    border-radius: 0.625rem;
+                    min-width: 7.2rem;
+                    height: 25px;
+                }
             }
         }
     }
     &__host {
-        &--img {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        @include md {
+            flex-direction: column;
+        }
+        &--info {
             display: flex;
-            justify-content: center;
-            margin-top: 30px;
-            gap: 10px;
+            justify-content: flex-end;
+            gap: 0.5rem;
             align-items: center;
+            margin: 1rem 0;
             p {
-                
-                font-style: normal;
-                font-weight: 500;
-                line-height: 142.6%;
-                width: 93px;
+                line-height: 17.11px;
+                width: 3.5rem;
                 margin: 0px;
                 text-align: right;
+                font-size: 0.75rem;
+                @include md {
+                    font-size: 18px;
+                }
             }
-
             img {
-                width: 64px;
+                width: 2rem;
                 border-radius: 50%;
+                @include md {
+                    width: 4rem;
+                }
             }
         }
-
-        ul {
+        &--stars {
             display: flex;
-            list-style-type: none;
-            padding: 0px;
-            gap: 10px;
-            justify-content: flex-end;
-            font-size: 1.8rem;
-            margin: 15px 0px;
-            color: var(--star-inactive);
-            & li {
-                height: 36px;
+            align-items: center;
+            gap: 0.2rem;
+            font-size: 1.125rem;
+            color: $star-inactive;
+            @include md {
+                font-size: 2rem;
+                gap: 0.5rem;
+                margin-bottom: 1.5rem;
             }
-            .full {
-                color: var(--first-color);
+            .star-filled {
+                color: $first-color;
             }
 
         }
